--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: inputbox_timer
-description: A new Flutter package project.
+description: A flutter widget that executes a function after a timeout.
 version: 0.0.1
-homepage:
+homepage: https://github.com/WTPENGUIN
+repository: https://github.com/WTPENGUIN/inputbox_timer.git
 
 environment:
   sdk: '>=3.1.4 <4.0.0'
